		* Amulegui can now be controlled by ed2k 
		* EC tools (amulegui, amulecmd, amuleweb) can use a local config dir now
		* Fixed crash in file system detection in Solaris
		* Fix: window size/position didn't get saved on some systems
		* aMule, aMuled and aMulegui can take ED2K links from the command line
		* More command line options for aMulegui

	Vollstrecker:
		* Unify copyright lines
		* Fixed clean and distclean targets for make
		* Various Updates in debian/ see debian/changelog
		* Added crash handling in command-line tools
		* Fix for autoconf-2.64.
		* Raised minimum wxWidgets version to 2.8.8

	Wuischke:
		* Simplify browser selection
		* Use DoIconize() for dclick on tray icon, too
		* Fix minimizing from tray icon
		* Add option to show chat messages in log
		* Add option to specify amuleweb binary location
		* Make EC authentication procedure more secure
		* Add support for categories to ed2k
		* Backup config file on shutdown

	Special Thanks To:
		* Greek for his contributions to aMule's user interface.
		* btkaos for his important work finding the source of bugs.
		* myth for seeing when everyone else was blind and uncovering
		  the grandfather of all fuck-ups
		* mirko.g for being so committed to compile aMule on Snow Leopard.

--------------------------------------------------------------------------------

Version 2.2.6 - The "we don't have holidays" version.
----------
2009-09-16

	GonoszTopi:
		* Fixed obfuscated server UDP communication.
		* Fixed cross-endian Kad node verification.
		* Fixed name conflict in builtin PHP parser.
		* Fixed configure finding unwanted Crypto++ installations.

	Marcell:
		* Properly update transfers tab's bottom pane's title.

	mr_hyde:
		* Fixed a bug in detecting and using the fallocate() function.

	Sam Hocevar:
		* Now really fixed that security issue.

	Stu Redman:
		* Fixed HTTP download if server transmits no content-length
		* Fixed several cases of amulecmd printing zero on big endian machines